<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChooseYourOwnAdventure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_start_adventure">Start an adventure</string>
    <string name="button_start_traveling">Start traveling</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_go_left">Go left</string>
    <string name="button_continue">Continue</string>
    <string name="button_go_right">Go right</string>
    <string name="text_view_message1">You have ventured down a dark alley, where would you like to go next?</string>
    <string name="button_door_1">Enter Door 1</string>
    <string name="button_door_2">Enter Door 2</string>
    <string name="text_view_message2">You have entered a room with two doors.</string>
    <string name="button_play_again">Play again!</string>
    <string name="title_activity_loose">LooseActivity</string>
    <string name="pref_category_customization">Settings</string>
    <string name="pref_difficulty_level_title">Difficulty levels</string>
    <string name="pref_difficulty_level_summary">Difficulty levels for the game</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_summary">Username for a personalized message.</string>
    <string name="activity_app_settings_title">Settings</string>
    <string name="default_username">brave fighter</string>
    <string name="user_info">Congratulations %s, you\'ve reached the gold!</string>
    <string name="user_info2">Oops %s, you\'ve falled into the fit of despair.</string>
</resources>
