<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_customization">

        <EditTextPreference
            android:key="username_preference"
            android:title="@string/pref_username_title"
            android:summary="@string/pref_username_summary"></EditTextPreference>
        <ListPreference
            android:key="difficulty_levels"
            android:title="@string/pref_difficulty_level_title"
            android:summary="@string/pref_difficulty_level_summary"
            android:entries="@array/difficulty_options"
            android:entryValues="@array/difficulty_options"
            android:
            ></ListPreference>
    </PreferenceCategory>
</PreferenceScreen>