<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_message1"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.31"
        android:layout_marginTop="200dp" />

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_continue"
            android:id="@+id/button_continue"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_go_right"
            android:id="@+id/button_go_right"
            android:layout_gravity="center|bottom|right"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_go_left"
            android:id="@+id/button_go_left"
            android:layout_gravity="center|bottom|left"
            android:layout_marginBottom="20dp" />
    </FrameLayout>
</LinearLayout>