<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_message2"
        android:id="@+id/textView3"
        android:gravity="center"
        android:layout_weight="1.31"
        android:layout_marginTop="200dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_door_1"
            android:id="@+id/button_door_1"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_door_2"
            android:id="@+id/button_door_2"
            android:layout_marginBottom="20dp"
            android:layout_gravity="right|bottom" />
    </FrameLayout>
</LinearLayout>